first task complete

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-Work</title>
+    <link rel="stylesheet" href="styles/st.css">
 </head>
 <body>
-    <h1>HI ...I am akib riad</h1>
+    <header>
+        <H1>Responsiive Homework Part One</H1>
+    </header>
+    <main>
+        <section class="fst-task">
+            <div class="img-containar">
+            <div class="img"><img src="images/boy.png" alt=""></div>
+            <div class="img"><img src="images/facebook.png" alt=""></div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
